tests/fail/test-neg-more-than-one-return.ctds
integer main(){
  integer a;
  a=0;
  return a;
  return 0;
  return;
}